# yurei-jsonrpc-client

./: .env.example  .gitignore  CMakeLists.txt  LICENSE  README.md  schema.sql
include/: config.h  db_writer.h  event_queue.h  http_poller.h  logging.h  metrics.h  parser.h  rate_limiter.h  websocket_client.h
scripts/: db_check.sh  db_init.sh
src/: config.c  db_writer.c  event_queue.c  http_poller.c  logging.c  main.c  metrics.c  parser.c  rate_limiter.c  websocket_client.c
